vac-rs/crates/surfaces/tui/src/chatwidget/snapshots/vac_tui__chatwidget__tests__plugins_popup_marketplace_remove_confirmation.snap
---
source: crates/surfaces/tui/src/chatwidget/tests/popups_and_settings.rs.inc
assertion_line: 571
expression: confirmation
---
  Plugins
  Remove Repo Marketplace marketplace?
  This removes the configured marketplace from VAC.

› 1. Remove marketplace  Remove this marketplace from the available plugin list.
  2. Back to plugins     Keep this marketplace installed.



  enter select · esc close
