vac-rs/crates/surfaces/tui/src/chatwidget/snapshots/vac_tui__chatwidget__tests__renamed_thread_footer_title.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
assertion_line: 1531
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"                                                                                "
"› Ask VAC to do anything                                                        "
"                                                                                "
"  gpt-5.3-vac High · Roadmap cleanup                                            "
