vac-rs/crates/surfaces/tui/src/chatwidget/snapshots/vac_tui__chatwidget__tests__review_queues_user_messages_snapshot.snap
---
source: crates/surfaces/tui/src/chatwidget/tests/review_mode.rs
assertion_line: 1406
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---









 
• Working (0s • esc to interrupt)
 
• Messages to be submitted at end of turn
  ↳ Steer submitted while /review was running.
 
› Ask VAC to do anything
 
  gpt-5.5 auto · /tmp/project
